fix for negative z objects being covered

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,9 +2,11 @@
 @import "statuscafe";
 @import "fonts";
 
+html {
+	background-color: #2196F3;
+}
 
 html, body {
-	background-color: #2196F3;
 	color: black;
 	text-align: center;
 	margin: 1px;
